# aws-logs-parquet-converter

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml  test.yml
.github/workflows/: dependabot-reviewer.yml  test.yml
converters/s3-server-access-log/: README.md  TODO  s3_server_access_logs.py  samconfig.toml  statemachine.asl.json  template.yaml  test_s3_server_access_logs.py
converters/s3-server-access-log/deploy/: samconfig.toml  statemachine.asl.json  template.yaml
converters/s3-server-access-log/example_sql/: athena_create_table.sql
