[project]
name = "aws-logs-parquet-converter"
description = ""
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "2.0"
addopts = "-rfEX -p pytester --strict-markers"
python_files = [
    "test_*.py",
    "*_test.py",
    "testing/python/*.py",
]
